--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         fill:#ff0000;
     }
     .url{
+        font-size: 21px;
         overflow:hidden;
         text-overflow:ellipsis;
         white-space:nowrap;
@@ -47,7 +48,7 @@
     h1{
         font-size:1.25rem;
         font-weight:500;
-        margin:0 0 16px 0;
+        margin:0 0 25px 0;
         color:#111;
     }
 </style>
