--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<link rel="icon" type="image/png" https://isgd.vercel.app">  
+<link rel="icon" type="image/png" https://isgd.vercel.app/iptv.png>  
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ссылки IPTV</title>
